# noctua

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
configs/: agent.example.toml  lora-training.toml  plans
configs/agent-templates/crucible/: agent.md  soul.md
configs/agent-templates/rome/: agent.md  soul.md
configs/plans/: omni-cpu-offload-phase1-results.yaml  omni-cpu-offload-phase1.yaml  rome-mvp-v1.example.yaml
data/: crucible-runs
data/samples/: sample_20260721.json
docs/: ROADMAP.md  architecture-memory.md  checkpoint-protocol.md  design.md  execution-router.md  memory-taxonomy.md
docs/plans/: cpu-offload-implementation.md
scripts/: gateway_compat.py  import_knowledge.py  import_knowledge_seed.py  import_memory_seed.py  import_opencode_sessions.py  import_structured_cases.py  retry_failed.py  run_everos.py  sample_trajectories.py
skills/: h20-batch-tuning.md
src/noctua/: schemas.py
src/noctua/agent/: __init__.py  protocol.py  trace.py
src/noctua/align/: __init__.py  feedback.py
src/noctua/eval/: __init__.py  verifier.py
