[project]
name = "noctua"
version = "0.1.0"
description = "Self-evolving Agent — EverMind memory evolution + open-source LoRA parameter evolution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "everos>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noctua"]
